# fivetran_snowflake

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: base_config.json  configuration.json  connector.py  deploy  gen_config.py  requirements.txt
notebooks/: 000 - Scratch.ipynb  001 - First Steps.ipynb
