[project]
name = "fivetran-snowflake"
version = "0.1.0"
description = "Fivetran custom connector (NewsAPI -> Snowflake) with Tabula Lingua linguistic analysis as part of ETL"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "black>=25.1.0",
    "fivetran-connector-sdk",
    "python-dotenv>=1.0.1",
    "requests",
]

[dependency-groups]
dev = [
    "duckdb>=1.2.1",
    "isort>=6.0.1",
    "jupyterlab>=4.3.6",
    "ruff>=0.11.1",
]
